packages/kyvernoPolicies/chart/tests/vpol/require-image-signature-cel/chainsaw-test/deployment-signed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signed-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signed-deployment
  template:
    metadata:
      labels:
        app: signed-deployment
    spec:
      containers:
      - name: c1
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
