packages/kyvernoPolicies/chart/tests/vpol/require-image-signature-cel/chainsaw-test/pod-signed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-pod
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
