packages/kyvernoPolicies/chart/tests/vpol/require-image-signature-cel/chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-image-signature-cel
spec:
  timeouts:
    cleanup: 2m
  steps:
  - name: step-01-policy-ready
    try:
    - apply:
        file: ../policy.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ImageValidatingPolicy
          metadata:
            name: require-image-signature-cel
          spec:
            validationActions:
             - Deny
            matchConditions:
              - name: scope-to-test-ns
                expression: (cel; "object.metadata.?namespace.orValue('') == '" + string(bindings.resolve("namespace")) + "'")
    - assert:
        file: policy-ready.yaml
  - name: step-02-signed-allow
    try:
    - apply:
        dryRun: true
        file: pod-signed.yaml
  - name: step-03-signed-deployment-allow
    try:
    - apply:
        dryRun: true
        file: deployment-signed.yaml
